fixed navbar on smaller widths

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -26,13 +26,11 @@ body {
 }
 
 #logo {
-    display:inline-block;
-    width:300px;
+    margin: 10px;
+    margin-right: 50px;
     height:100%;
-    margin:0 auto;
     font-family: Antonio, sans-serif;
     letter-spacing: -5px;
-    padding-left:30px;
     font-size:24pt;
     color:white;
 }
@@ -43,14 +41,15 @@ body {
 
 #nav_bar {
     display:inline-block;
-    height:50px;
     width:100%;
     color:white;
     background-color:#4A068F;
+    height: auto;
 }
 
 #nav_buttons {
     display:inline-block;
+    height: auto;
 }
 
 #nav_buttons a {
@@ -58,6 +57,7 @@ body {
     color:white;
     font-size:16pt;
     text-decoration:none;
+    height: auto;
 }
 
 #nav_buttons a:link {
