--- a/static/css/mydininglog.css
+++ b/static/css/mydininglog.css
@@ -1,31 +1,3 @@
-p, h1 {
-    color: black;
-}
-
-@font-face {
-    font-family: Antonio;
-    src: url(antonio/Antonio-Regular.ttf);
-}
-
-@font-face {
-    font-family: Antonio-Light;
-    src: url(antonio/Antonio-Light.ttf);
-}
-
-@font-face {
-    font-family: Antonio-Bold;
-    src: url(antonio/Antonio-Bold);
-}
-
-.content_box {
-    width:600px;
-    height:600px;
-    margin:auto;
-    color:black;
-    background-color:white;
-
-}
-
 #menus {
     display:block;
 }
@@ -123,54 +95,6 @@ body {
     font-family: "Vollkorn", sans-serif;
 }
 
-#logo {
-    display:inline-block;
-    width:300px;
-    height:100%;
-    margin:0 auto;
-    font-family: Antonio, sans-serif;
-    letter-spacing: -5px;
-    padding-left:30px;
-    font-size:24pt;
-    color:white;
-}
-
-#nav_bar {
-    display:inline-block;
-    height:45px;
-    width:100%;
-    color:white;
-    background-color:#4A068F;
-}
-
-#nav_buttons {
-    display:inline-block;
-    height:100%;
-    width:580px;
-    
-}
-
-#nav_buttons a {
-    display:inline-block;
-    height:100%;
-    margin:0 auto;
-    padding:0 15px 0 15px;
-    color:white;
-    font-size:16pt;
-    text-decoration:none;
-}
-
-#nav_buttons a:link {
-    color:white;
-    vertical-align:center;
-}
-
-#nav_buttons a:hover {
-    color:white;
-    background-color:#7309AA;
-}
-
-
 #dining_bar {
     height:20px;
     width:100%;
@@ -202,11 +126,6 @@ body {
     background-color:white;
 }
 
-
-
-#logo {
-    cursor: pointer;
-}
 /*
   css for my dining subpages
 */
